# creditor

./: .gitignore  README.md
.circleci/: config.yml
backend/: .coveragerc  Dockerfile  pyproject.toml  pytest.ini
backend/.docker-compose/: base.yml  development.yml  production.yml  staging.yml
backend/.env.sample/: .env.base  .env.development  .env.production
backend/api/models/: crew_model.py
backend/api/serializers/: crew_serializer.py
backend/api/tests/: crew_tests.py
backend/api/urls/: celery_urls.py  crew_urls.py
backend/api/views/: celery_views.py  crew_views.py
backend/src/: celery.py  urls.py
backend/src/settings/: base.py  production.py  staging.py
crewtech_api/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
crewtech_api/.docker-compose/: base.yml  development.yml  production.yml  staging.yml
crewtech_api/.env.sample/: .env.base  .env.development  .env.production  .env.staging
crewtech_api/crew/: urls.py  views.py
crewtech_api/src/: celery.py  urls.py
crewtech_api/src/settings/: base.py
crewtech_infrastructure/: README.md
crewtech_infrastructure/circleci/: main.tf  variables.tf
crewtech_infrastructure/digital_ocean/: main.auto.tfvars  main.tf  output.tf  variables.tf
crewtech_scripts/: get_infra_output.py  run_app.py  run_containers.py  run_development.sh  run_production.sh  run_staging.sh  set_env_vars.py
infrastructure/: .backend.hcl.sample  .secrets.auto.tfvars.sample  README.md  circleci.tf  cloudamqp.tf  digitalocean.tf  providers.tf
scripts/: get_circleci_env.py  get_infra_output.py  run_containers.py
(+53 files in other folders)
