[tool.poetry]
name = "crewtech_api"
version = "0.1.0"
description = "Crewtech Backend API."
authors = ["mstva <mustafa.abdulluh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
celery = "^5.2.7"
redis = "^4.3.4"
django-storages = "^1.13.1"
gunicorn = "^20.1.0"
boto3 = "^1.25.3"
djangorestframework = "^3.14.0"

[tool.poetry.group.dev.dependencies]
psycopg2-binary = "^2.9.5"
whitenoise = "^6.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
